<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/iv_detail_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:paddingBottom="-20dp"
            app:layout_constraintBottom_toTopOf="@+id/img_detail_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.278"
            app:srcCompat="@drawable/shape_bg" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="166dp"
            android:layout_height="120dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="59dp"
            android:layout_toEndOf="@+id/img_detail_photo"
            android:gravity="center"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/iv_detail_bg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_photo"
            app:layout_constraintTop_toTopOf="@+id/iv_detail_bg"
            tools:text="@string/film_name" />

        <ImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="124dp"
            android:layout_height="176dp"
            android:layout_marginTop="48dp"
            android:scaleType="centerCrop"
            app:circularflow_defaultRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="184dp"
            android:text="@string/rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toEndOf="@+id/img_detail_stars"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_released"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="4dp"
            android:text="@string/year_released"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_rating" />

        <ImageView
            android:id="@+id/img_detail_stars"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/stars" />

        <TextView
            android:id="@+id/tv_detail_head_desc"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/tv_detail_head_sinopsis"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_photo" />

        <TextView
            android:id="@+id/tv_detail_desc"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_head_desc" />

        <TextView
            android:id="@+id/tv_detail_head_aktor"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/tv_detail_head_pemeran"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_desc" />

        <TextView
            android:id="@+id/tv_detail_actor"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/actor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_head_aktor" />

        <Button
            android:id="@+id/btn_detail_share"
            android:layout_width="319dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_actor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>