<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="80dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/img_detail_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_detail_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_detail_photo"
            tools:text="@string/film_name" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:visibility="invisible"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_detail_photo"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_detail_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
            card_view:layout_constraintVertical_bias="0.647"
            tools:text="@string/desc"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/tv_item_actor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:visibility="invisible"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_detail_photo"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_detail_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
            card_view:layout_constraintVertical_bias="0.647"
            tools:text="@string/actor"
            tools:visibility="invisible" />

        <ImageView
            android:id="@+id/iv_item_star"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="4dp"
            card_view:layout_constraintStart_toStartOf="@+id/tv_detail_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
            card_view:srcCompat="@drawable/stars" />

        <TextView
            android:id="@+id/tv_item_see_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/see_sinopsis"
            android:textColor="#1D2B53"
            android:textSize="10sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.974"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_description" />

        <TextView
            android:id="@+id/tv_item_released"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/year_released"
            android:textSize="12sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@+id/iv_item_star"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/iv_item_star"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_item_star" />

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/rating"
            android:textSize="10sp"
            card_view:layout_constraintStart_toEndOf="@+id/iv_item_star"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>